fixed thumbnail positioning

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
         <div class='project-container'>
           <p class='project-title'>Fridge Forager</p>
-          <a href="https://scottgall.github.io/Fridge-Forager/" target="_blank"><img class='thumbnail rounded s-right' src='assets/images/fridgeforager.jpg'/></a>
+          <a href="https://scottgall.github.io/Fridge-Forager/" target="_blank"><img class='thumbnail rounded s-right xs-left' src='assets/images/fridgeforager.jpg'/></a>
           <p class='description'>Yummly API recipe search engine</p>
           <div class='project-links'>
               <a href="https://scottgall.github.io/Fridge-Forager/" target="_blank"><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon"></a>
@@ -132,7 +132,7 @@
 
         <div class='project-container'>
           <p class='project-title'>Star Wars RPG</p>
-          <a href="https://scottgall.github.io/Star-Wars-RPG/" target="_blank"><img class='thumbnail rounded big-right s-right med-left' src='assets/images/starwars.jpg'/></a>
+          <a href="https://scottgall.github.io/Star-Wars-RPG/" target="_blank"><img class='thumbnail rounded big-right s-right xs-left med-left' src='assets/images/starwars.jpg'/></a>
           <p class='description'>Single-player Javascirpt RPG</p>
           <div class='project-links'>
             <a href="https://scottgall.github.io/Star-Wars-RPG/" target="_blank"><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon" /></a>
