changed project container size

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           <div class='project-container'>
             <p class='project-title'>News Scraper</p>
             <a href="https://mongolianmongoscraper.herokuapp.com/" target="_blank"><img class='thumbnail rounded small-right med-right' src='assets/images/newsscraper.jpg'/></a>
-            <p class='description'>MongoDB web scraper</p>
+            <p class='description'>Cheerio & MongoDB web scraper</p>
             <div class='project-links'>
               <a href="https://mongolianmongoscraper.herokuapp.com/" target="_blank"><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon"></a>
               <a href="https://github.com/scottgall/Mongolian-News-Scraper/" target="_blank"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
@@ -143,7 +143,7 @@
           <div class='project-container'>
             <p class='project-title'>Skateboard Trivia</p>
             <a href="https://scottgall.github.io/Skateboard-Trivia-Quiz/" target="_blank"><img class='thumbnail rounded big-right s-left' src='assets/images/skateboardtrivia.jpg'/></a>
-            <p class='description'>Timed multiple-choice trivia quiz</p>
+            <p class='description'>Timed multiple-choice trivia</p>
             <div class='project-links'>
               <a href="https://scottgall.github.io/Skateboard-Trivia-Quiz/" target="_blank""><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon"></a>
               <a href="https://github.com/scottgall/Skateboard-Trivia-Quiz/" target="_blank"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
@@ -155,7 +155,7 @@
           <div class='project-container'>
             <p class='project-title'>Guess The Trick</p>
             <a href="https://scottgall.github.io/Guess-The-Trick/" target="_blank"><img class='thumbnail rounded small-right s-left big-right' src='assets/images/guessthetrick.jpg'/></a>
-            <p class='description'>Skateboarding themed hangman game</p>
+            <p class='description'>JavaScript hangman game</p>
             <div class='project-links'>
               <a href="https://scottgall.github.io/Guess-The-Trick/" target="_blank"><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon"></a>
               <a href="https://github.com/scottgall/Guess-The-Trick/" target="_blank"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
