alternating directions on mobile

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
           <div id="waveHorizontal2" class="waveHorizontal"></div>
           <div id="waveHorizontal3" class="waveHorizontal"></div>
         </div>
+
         <div class='project-section'>
           <div class='project-container'>
             <p class='project-title'>LookingBack</p>
@@ -105,9 +106,9 @@
 
           <div class='project-container'>
             <p class='project-title'>JobSpace</p>
-            <a href="https://thejobspace.herokuapp.com/" target="_blank"><img class='thumbnail rounded small-right' src='assets/images/jobspace.png'/></a>
-            <p class='description'>MySQL job application tracker</p>
-            <div class='project-links'>
+            <a href="https://thejobspace.herokuapp.com/" target="_blank"><img class='thumbnail rounded xs-right' src='assets/images/jobspace.png'/></a>
+            <p class='description xs-text-right'>MySQL job application tracker</p>
+            <div class='project-links xs-text-right'>
               <a href="https://thejobspace.herokuapp.com/" target="_blank"><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon"></a>
               <a href="https://github.com/scottgall/Job-Space/" target="_blank"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
   <!--             
@@ -130,9 +131,9 @@
 
           <div class='project-container'>
             <p class='project-title'>News Scraper</p>
-            <a href="https://mongolianmongoscraper.herokuapp.com/" target="_blank"><img class='thumbnail rounded small-right med-right' src='assets/images/newsscraper.jpg'/></a>
-            <p class='description'>Cheerio & MongoDB web scraper</p>
-            <div class='project-links'>
+            <a href="https://mongolianmongoscraper.herokuapp.com/" target="_blank"><img class='thumbnail rounded xs-right' src='assets/images/newsscraper.jpg'/></a>
+            <p class='description xs-text-right'>Cheerio & MongoDB web scraper</p>
+            <div class='project-links xs-text-right'>
               <a href="https://mongolianmongoscraper.herokuapp.com/" target="_blank"><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon"></a>
               <a href="https://github.com/scottgall/Mongolian-News-Scraper/" target="_blank"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
             </div>
@@ -154,9 +155,9 @@
 
           <div class='project-container'>
             <p class='project-title'>Guess The Trick</p>
-            <a href="https://scottgall.github.io/Guess-The-Trick/" target="_blank"><img class='thumbnail rounded small-right s-left big-right' src='assets/images/guessthetrick.jpg'/></a>
-            <p class='description'>JavaScript hangman game</p>
-            <div class='project-links'>
+            <a href="https://scottgall.github.io/Guess-The-Trick/" target="_blank"><img class='thumbnail rounded xs-right' src='assets/images/guessthetrick.jpg'/></a>
+            <p class='description xs-text-right'>JavaScript hangman game</p>
+            <div class='project-links xs-text-right'>
               <a href="https://scottgall.github.io/Guess-The-Trick/" target="_blank"><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon"></a>
               <a href="https://github.com/scottgall/Guess-The-Trick/" target="_blank"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
             </div>
@@ -178,9 +179,9 @@
 
           <div class='project-container bottom-right'>
             <p class='project-title'>Burgers</p>
-            <a href="https://sequelize-orm-demo.herokuapp.com/" target="_blank"><img class='thumbnail rounded small-right s-right big-right med-left' src='assets/images/burgers.jpg'/></a>
-            <p class='description'>CRUD app as a Sequelize ORM demo</p>
-            <div class='project-links'>
+            <a href="https://sequelize-orm-demo.herokuapp.com/" target="_blank"><img class='thumbnail rounded xs-right' src='assets/images/burgers.jpg'/></a>
+            <p class='description xs-text-right'>CRUD app as a Sequelize ORM demo</p>
+            <div class='project-links xs-text-right'>
               <a href="https://sequelize-orm-demo.herokuapp.com/" target="_blank"><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon"></a>
               <a href="https://github.com/scottgall/Sequelize-ORM-Demo" target="_blank"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
             </div>
