changed logical properties

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           <div class='project-container'>
             <p class='project-title'>Skateboard Trivia</p>
             <a href="https://scottgall.github.io/Skateboard-Trivia-Quiz/" target="_blank"><img class='thumbnail rounded big-right s-left' src='assets/images/skateboardtrivia.jpg'/></a>
-            <p class='description'>Timed multiple-choice trivia</p>
+            <p class='description'>Timed multiple-choice trivia game</p>
             <div class='project-links'>
               <a href="https://scottgall.github.io/Skateboard-Trivia-Quiz/" target="_blank""><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon"></a>
               <a href="https://github.com/scottgall/Skateboard-Trivia-Quiz/" target="_blank"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
