--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
         <div class='project-section'>
           <div class='project-container'>
-            <p class='project-title'>LookingBack</p>
+            <p class='project-title'>LOOKING BACK</p>
             <a href="https://looking-back.herokuapp.com/" target="_blank"><img class='thumbnail rounded' src='assets/images/lookingback.jpg'/></a>
             <p class='description'>MERN stack social media app</p>
             <div class='project-links'>
@@ -105,7 +105,7 @@
           </div>
 
           <div class='project-container'>
-            <p class='project-title'>JobSpace</p>
+            <p class='project-title'>JOBSPACE</p>
             <a href="https://thejobspace.herokuapp.com/" target="_blank"><img class='thumbnail rounded xs-right' src='assets/images/jobspace.png'/></a>
             <p class='description xs-text-right'>MySQL job application tracker</p>
             <div class='project-links xs-text-right'>
@@ -118,7 +118,7 @@
           </div>
 
           <div class='project-container'>
-            <p class='project-title'>Fridge Forager</p>
+            <p class='project-title'>FRIDGE FORAGER</p>
             <a href="https://scottgall.github.io/Fridge-Forager/" target="_blank"><img class='thumbnail rounded s-right xs-left' src='assets/images/fridgeforager.jpg'/></a>
             <p class='description'>Yummly API recipe search engine</p>
             <div class='project-links'>
@@ -130,7 +130,7 @@
           </div>
 
           <div class='project-container'>
-            <p class='project-title'>News Scraper</p>
+            <p class='project-title'>NEWS SCRAPER</p>
             <a href="https://mongolianmongoscraper.herokuapp.com/" target="_blank"><img class='thumbnail rounded xs-right' src='assets/images/newsscraper.jpg'/></a>
             <p class='description xs-text-right'>Cheerio & MongoDB web scraper</p>
             <div class='project-links xs-text-right'>
@@ -142,7 +142,7 @@
           </div>
 
           <div class='project-container'>
-            <p class='project-title'>Skateboard Trivia</p>
+            <p class='project-title'>SKATEBOARD TRIVIA</p>
             <a href="https://scottgall.github.io/Skateboard-Trivia-Quiz/" target="_blank"><img class='thumbnail rounded big-right s-left' src='assets/images/skateboardtrivia.jpg'/></a>
             <p class='description'>Timed multiple-choice trivia game</p>
             <div class='project-links'>
@@ -154,7 +154,7 @@
           </div>
 
           <div class='project-container'>
-            <p class='project-title'>Guess The Trick</p>
+            <p class='project-title'>GUESS THE TRICK</p>
             <a href="https://scottgall.github.io/Guess-The-Trick/" target="_blank"><img class='thumbnail rounded xs-right' src='assets/images/guessthetrick.jpg'/></a>
             <p class='description xs-text-right'>JavaScript hangman game</p>
             <div class='project-links xs-text-right'>
@@ -166,7 +166,7 @@
           </div>
 
           <div class='project-container'>
-            <p class='project-title'>Star Wars RPG</p>
+            <p class='project-title'>STAR WARS RPG</p>
             <a href="https://scottgall.github.io/Star-Wars-RPG/" target="_blank"><img class='thumbnail rounded big-right s-right xs-left med-left' src='assets/images/starwars.jpg'/></a>
             <p class='description'>Single-player Javascirpt RPG</p>
             <div class='project-links'>
@@ -178,7 +178,7 @@
           </div>
 
           <div class='project-container bottom-right'>
-            <p class='project-title'>Burgers</p>
+            <p class='project-title'>BURGERS</p>
             <a href="https://sequelize-orm-demo.herokuapp.com/" target="_blank"><img class='thumbnail rounded xs-right' src='assets/images/burgers.jpg'/></a>
             <p class='description xs-text-right'>CRUD app as a Sequelize ORM demo</p>
             <div class='project-links xs-text-right'>
