pics and text floating at breakpoints correctly

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           <div class='project-container'>
             <p class='project-title'>FRIDGE FORAGER</p>
             <a href="https://scottgall.github.io/Fridge-Forager/" target="_blank"><img class='thumbnail rounded s-right xs-left' src='assets/images/fridgeforager.jpg'/></a>
-            <p class='description'>Yummly API recipe search engine</p>
+            <p class='description s-text-right'>Yummly API recipe search engine</p>
             <div class='project-links'>
                 <a href="https://scottgall.github.io/Fridge-Forager/" target="_blank"><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon"></a>
                 <a href="https://github.com/scottgall/Fridge-Forager/" target="_blank"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
@@ -131,8 +131,8 @@
 
           <div class='project-container'>
             <p class='project-title'>NEWS SCRAPER</p>
-            <a href="https://mongolianmongoscraper.herokuapp.com/" target="_blank"><img class='thumbnail rounded xs-right' src='assets/images/newsscraper.jpg'/></a>
-            <p class='description xs-text-right'>Cheerio & MongoDB web scraper</p>
+            <a href="https://mongolianmongoscraper.herokuapp.com/" target="_blank"><img class='thumbnail rounded m-right xs-right' src='assets/images/newsscraper.jpg'/></a>
+            <p class='description m-text-right xs-text-right'>Cheerio & MongoDB web scraper</p>
             <div class='project-links xs-text-right'>
               <a href="https://mongolianmongoscraper.herokuapp.com/" target="_blank"><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon"></a>
               <a href="https://github.com/scottgall/Mongolian-News-Scraper/" target="_blank"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
@@ -143,8 +143,8 @@
 
           <div class='project-container'>
             <p class='project-title'>SKATEBOARD TRIVIA</p>
-            <a href="https://scottgall.github.io/Skateboard-Trivia-Quiz/" target="_blank"><img class='thumbnail rounded big-right s-left' src='assets/images/skateboardtrivia.jpg'/></a>
-            <p class='description'>Timed multiple-choice trivia game</p>
+            <a href="https://scottgall.github.io/Skateboard-Trivia-Quiz/" target="_blank"><img class='thumbnail rounded l-right s-left' src='assets/images/skateboardtrivia.jpg'/></a>
+            <p class='description s-text-left l-text-right'>Timed multiple-choice trivia game</p>
             <div class='project-links'>
               <a href="https://scottgall.github.io/Skateboard-Trivia-Quiz/" target="_blank""><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon"></a>
               <a href="https://github.com/scottgall/Skateboard-Trivia-Quiz/" target="_blank"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
@@ -155,8 +155,8 @@
 
           <div class='project-container'>
             <p class='project-title'>GUESS THE TRICK</p>
-            <a href="https://scottgall.github.io/Guess-The-Trick/" target="_blank"><img class='thumbnail rounded xs-right' src='assets/images/guessthetrick.jpg'/></a>
-            <p class='description xs-text-right'>JavaScript hangman game</p>
+            <a href="https://scottgall.github.io/Guess-The-Trick/" target="_blank"><img class='thumbnail rounded l-right s-left xs-right' src='assets/images/guessthetrick.jpg'/></a>
+            <p class='description l-text-right s-text-left xs-text-right'>JavaScript hangman game</p>
             <div class='project-links xs-text-right'>
               <a href="https://scottgall.github.io/Guess-The-Trick/" target="_blank"><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon"></a>
               <a href="https://github.com/scottgall/Guess-The-Trick/" target="_blank"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
@@ -167,8 +167,8 @@
 
           <div class='project-container'>
             <p class='project-title'>STAR WARS RPG</p>
-            <a href="https://scottgall.github.io/Star-Wars-RPG/" target="_blank"><img class='thumbnail rounded big-right s-right xs-left med-left' src='assets/images/starwars.jpg'/></a>
-            <p class='description'>Single-player Javascirpt RPG</p>
+            <a href="https://scottgall.github.io/Star-Wars-RPG/" target="_blank"><img class='thumbnail rounded l-right m-left s-right xs-left' src='assets/images/starwars.jpg'/></a>
+            <p class='description m-text-left l-text-right s-text-right'>Single-player Javascirpt RPG</p>
             <div class='project-links'>
               <a href="https://scottgall.github.io/Star-Wars-RPG/" target="_blank"><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon" /></a>
               <a href="https://github.com/scottgall/Star-Wars-RPG" target="_blank"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon" ></a>
@@ -179,9 +179,9 @@
 
           <div class='project-container bottom-right'>
             <p class='project-title'>BURGERS</p>
-            <a href="https://sequelize-orm-demo.herokuapp.com/" target="_blank"><img class='thumbnail rounded xs-right' src='assets/images/burgers.jpg'/></a>
-            <p class='description xs-text-right'>CRUD app as a Sequelize ORM demo</p>
-            <div class='project-links xs-text-right'>
+            <a href="https://sequelize-orm-demo.herokuapp.com/" target="_blank"><img class='thumbnail rounded l-right m-left s-right xs-right' src='assets/images/burgers.jpg'/></a>
+            <p class='description m-text-left s-text-right xs-text-right'>CRUD app as a Sequelize ORM demo</p>
+            <div class='project-links l-text-right xs-text-right'>
               <a href="https://sequelize-orm-demo.herokuapp.com/" target="_blank"><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon"></a>
               <a href="https://github.com/scottgall/Sequelize-ORM-Demo" target="_blank"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
             </div>
