--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           </a>
         </div>
         <p>scottarthurgall@gmail.com</p>
-        <p>Chicago, IL</p>
+        <p>CHICAGO, IL</p>
         <!-- <h2>web developer</h2> -->
         <p class='personal-statement'><i>I create polished interfaces and powerful tools that make for smooth, accessible user experiences.</i></p>
       </div>
