--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
           <div class='project-container'>
             <p class='project-title'>STAR WARS RPG</p>
             <a href="https://scottgall.github.io/Star-Wars-RPG/" target="_blank"><img class='thumbnail rounded l-right m-left s-right xs-left' src='assets/images/starwars.jpg'/></a>
-            <p class='description m-text-left l-text-right s-text-right xs-text-left'>Single-player Javascirpt RPG</p>
+            <p class='description m-text-left l-text-right s-text-right xs-text-left'>Single-player JavaScript RPG</p>
             <div class='project-links l-text-right m-text-left s-text-right xs-text-left'>
               <a href="https://scottgall.github.io/Star-Wars-RPG/" target="_blank"><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon" /></a>
               <a href="https://github.com/scottgall/Star-Wars-RPG" target="_blank"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon" ></a>
