--- a/resume.html
+++ b/resume.html
@@ -1,1 +1,1 @@
-<div>hello</div>
+<html><body style="height: 100%; width: 100%; overflow: hidden; margin: 0px; background-color: rgb(82, 86, 89);"><embed width="100%" height="100%" name="plugin" id="plugin" src="assets/images/Resume_ScottGall.pdf" type="application/pdf" internalinstanceid="9"></body></html>
