--- a/resume.html
+++ b/resume.html
@@ -1,3 +1,7 @@
-<html><body style="height: 100%; width: 100%; overflow: hidden; margin: 0px; background-color: rgb(82, 86, 89);">
+<html>
+  <head>
+      <meta property=”og:image” content=”assets/images/cat.jpg” />
+  </head>
+  <body style="height: 100%; width: 100%; overflow: hidden; margin: 0px; background-color: rgb(82, 86, 89);">
   <img src='assets/images/cat.jpg' style='position: relative;'>
   <embed width="100%" height="100%" name="plugin" id="plugin" src="assets/images/Resume_ScottGall.pdf" type="application/pdf" internalinstanceid="9" style='position: absolute; top: 0px; left: 0px'></body></html>
