added more meta tags

--- a/resume.html
+++ b/resume.html
@@ -1,6 +1,13 @@
 <html>
   <head>
-      <meta property=”og:image” content=”assets/images/cat.jpg” />
+      <meta charset="utf-8" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <title>Scott Gall</title>
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta property='og:title' content='Title of the article" />
+      <meta property='og:image' content='assets/images/scott-square-compressed.jpg"/>
+      <meta property='og:description' content='Description that will show in the preview"/>
+      <meta property='og:url' content='//www.example.com/URL of the article" />  
   </head>
   <body style="height: 100%; width: 100%; overflow: hidden; margin: 0px; background-color: rgb(82, 86, 89);">
   <img src='assets/images/cat.jpg' style='position: relative;'>
