--- a/resume.html
+++ b/resume.html
@@ -3,10 +3,11 @@
       <meta charset="utf-8" />
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <meta property='og:title' content='Title of the article' />
-      <meta property='og:image' content='assets/images/scott-square-compressed.jpg'/>
-      <meta property='og:description' content='Description that will show in the preview'/>
-      <meta property='og:url' content='//www.example.com/URL of the article' />  
+      <title>Resume_ScottGall</title>
+      <meta property='og:title' content='Resume' />
+      <meta property='og:image' content='https://res.cloudinary.com/dmkdfvoqb/image/upload/q_auto/v1548286375/scott-square-2.jpg'/>
+      <meta property='og:description' content='Resume'/>
+      <meta property='og:url' content='https://scott-gall.com/resume' />  
   </head>
   <body style="height: 100%; width: 100%; overflow: hidden; margin: 0px; background-color: rgb(82, 86, 89);">
 
