--- a/resume.html
+++ b/resume.html
@@ -1,17 +1,17 @@
 <html>
   <head>
       <meta charset="utf-8" />
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <meta name="viewport" content="width=device-width, initial-scale=1" />
+      <meta property="og:title" content="Resume" />
+      <meta property="og:image" content="https://res.cloudinary.com/dmkdfvoqb/image/upload/q_auto/v1548286375/scott-square-2.jpg"/>
+      <meta property="og:description" content="Resume"/>
+      <meta property="og:url" content="https://scott-gall.com/resume" />  
       <title>Resume_ScottGall</title>
-      <meta property='og:title' content='Resume' />
-      <meta property='og:image' content='https://res.cloudinary.com/dmkdfvoqb/image/upload/q_auto/v1548286375/scott-square-2.jpg'/>
-      <meta property='og:description' content='Resume'/>
-      <meta property='og:url' content='https://scott-gall.com/resume' />  
   </head>
   <body style="height: 100%; width: 100%; overflow: hidden; margin: 0px; background-color: rgb(82, 86, 89);">
 
-  <embed width="100%" height="100%" name="plugin" id="plugin" src="assets/images/Resume_ScottGall.pdf" type="application/pdf" internalinstanceid="9" style='position: absolute; top: 0px; left: 0px'>
+  <embed width="100%" height="100%" name="plugin" id="plugin" src="assets/images/Resume_ScottGall.pdf" type="application/pdf" internalinstanceid="9" style="position: absolute; top: 0px; left: 0px">
   
   </body>  
 </html>
