added resume png

--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <meta property="og:title" content="Resume" />
-      <meta property="og:image" content="https://res.cloudinary.com/dmkdfvoqb/image/upload/q_auto/v1548286375/scott-square-2.jpg"/>
+      <meta property="og:image" content="assets/images/resume.png"/>
       <meta property="og:description" content="Resume"/>
       <meta property="og:url" content="https://scott-gall.com/resume" />  
       <title>Resume_ScottGall</title>
