--- a/index.html
+++ b/index.html
@@ -79,7 +79,6 @@
         </div>
         <p>scottarthurgall@gmail.com</p>
         <p>CHICAGO, IL</p>
-        <!-- <h2>web developer</h2> -->
         <p class='personal-statement'><i>I create polished interfaces and powerful tools that make for smooth, accessible user experiences.</i></p>
       </div>
 
@@ -98,9 +97,6 @@
             <div class='project-links'>
                 <a href="https://looking-back.herokuapp.com/" target="_blank"><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon"></a>
                 <a href="https://github.com/scottgall/Looking-Back/" target="_blank"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
-                <!-- <a href="https://github.com/scottgall/Looking-Back/">GitHub</a>   -->
-              <!-- <a href="https://looking-back.herokuapp.com/">Link</a> -->
-
             </div>
           </div>
 
@@ -111,9 +107,6 @@
             <div class='project-links xs-text-right'>
               <a href="https://thejobspace.herokuapp.com/" target="_blank"><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon"></a>
               <a href="https://github.com/scottgall/Job-Space/" target="_blank"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
-  <!--             
-              <a href="https://thejobspace.herokuapp.com/">Link</a>
-              <a href="https://github.com/scottgall/Job-Space/">GitHub</a> -->
             </div>
           </div>
 
@@ -124,33 +117,17 @@
             <div class='project-links s-text-right xs-text-left'>
                 <a href="https://scottgall.github.io/Fridge-Forager/" target="_blank"><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon"></a>
                 <a href="https://github.com/scottgall/Fridge-Forager/" target="_blank"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
-              <!-- <a href="https://scottgall.github.io/Fridge-Forager/">Link</a>
-              <a href="https://github.com/scottgall/Fridge-Forager/">GitHub</a> -->
             </div>
-          </div>
-
-          <div class='project-container'>
-            <p class='project-title'>NEWS SCRAPER</p>
-            <a href="https://mongolianmongoscraper.herokuapp.com/" target="_blank"><img class='thumbnail rounded m-right xs-right' src='assets/images/newsscraper.jpg'/></a>
-            <p class='description m-text-right xs-text-right'>Cheerio & MongoDB web scraper</p>
-            <div class='project-links m-text-right xs-text-right'>
-              <a href="https://mongolianmongoscraper.herokuapp.com/" target="_blank"><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon"></a>
-              <a href="https://github.com/scottgall/Mongolian-News-Scraper/" target="_blank"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
-            </div>
-            <!-- <a href="https://mongolianmongoscraper.herokuapp.com/">Link</a>
-            <a href="https://github.com/scottgall/Mongolian-News-Scraper/">GitHub</a> -->
           </div>
 
           <div class='project-container'>
             <p class='project-title'>SKATEBOARD TRIVIA</p>
-            <a href="https://scottgall.github.io/Skateboard-Trivia-Quiz/" target="_blank"><img class='thumbnail rounded l-right s-left' src='assets/images/skateboardtrivia.jpg'/></a>
-            <p class='description s-text-left l-text-right'>Timed multiple-choice trivia game</p>
-            <div class='project-links l-text-right s-text-left'>
+            <a href="https://scottgall.github.io/Skateboard-Trivia-Quiz/" target="_blank"><img class='thumbnail rounded l-right s-right' src='assets/images/skateboardtrivia.jpg'/></a>
+            <p class='description s-text-eifhr l-text-right'>Timed multiple-choice trivia game</p>
+            <div class='project-links l-text-right s-text-right'>
               <a href="https://scottgall.github.io/Skateboard-Trivia-Quiz/" target="_blank""><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon"></a>
               <a href="https://github.com/scottgall/Skateboard-Trivia-Quiz/" target="_blank"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
             </div>
-            <!-- <a href="https://scottgall.github.io/Skateboard-Trivia-Quiz/">Link</a>
-            <a href="https://github.com/scottgall/Skateboard-Trivia-Quiz/">GitHub</a> -->
           </div>
 
           <div class='project-container'>
@@ -161,33 +138,8 @@
               <a href="https://scottgall.github.io/Guess-The-Trick/" target="_blank"><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon"></a>
               <a href="https://github.com/scottgall/Guess-The-Trick/" target="_blank"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
             </div>
-            <!-- <a href="https://scottgall.github.io/Guess-The-Trick/">Link</a>
-            <a href="https://github.com/scottgall/Guess-The-Trick/">GitHub</a> -->
           </div>
 
-          <div class='project-container'>
-            <p class='project-title'>STAR WARS RPG</p>
-            <a href="https://scottgall.github.io/Star-Wars-RPG/" target="_blank"><img class='thumbnail rounded l-right m-left s-right xs-left' src='assets/images/starwars.jpg'/></a>
-            <p class='description m-text-left l-text-right s-text-right xs-text-left'>Single-player JavaScript RPG</p>
-            <div class='project-links l-text-right m-text-left s-text-right xs-text-left'>
-              <a href="https://scottgall.github.io/Star-Wars-RPG/" target="_blank"><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon" /></a>
-              <a href="https://github.com/scottgall/Star-Wars-RPG" target="_blank"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon" ></a>
-            </div>
-            <!-- <a href="https://scottgall.github.io/Star-Wars-RPG/">Link</a>
-            <a href="https://github.com/scottgall/Star-Wars-RPG">GitHub</a> -->
-          </div>
-
-          <div class='project-container bottom-right'>
-            <p class='project-title'>BURGERS</p>
-            <a href="https://sequelize-orm-demo.herokuapp.com/" target="_blank"><img class='thumbnail rounded l-right m-left s-right xs-right' src='assets/images/burgers.jpg'/></a>
-            <p class='description l-text-right m-text-left s-text-right xs-text-right'>CRUD app as a Sequelize ORM demo</p>
-            <div class='project-links l-text-right m-text-left s-text-right xs-text-right'>
-              <a href="https://sequelize-orm-demo.herokuapp.com/" target="_blank"><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon"></a>
-              <a href="https://github.com/scottgall/Sequelize-ORM-Demo" target="_blank"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
-            </div>
-          </div>
-          <!-- <a href="https://sequelize-orm-demo.herokuapp.com/">Link</a>
-          <a href="https://github.com/scottgall/Sequelize-ORM-Demo">GitHub</a> -->
         </div>
       </div>
     </div>
