--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html>
 <head>
   <meta charset="utf-8" />
+  <meta property="og:title" content="Portfolio" />
+  <meta property="og:image" content="assets/images/website.png"/>
+  <meta property="og:description" content="Portfolio"/>
+  <meta property="og:url" content="https://scott-gall.com/" />  
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Scott Gall</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
