--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@
       <meta property="og:image" content="assets/images/resume.png"/>
       <meta property="og:description" content="Resume"/>
       <meta property="og:url" content="https://scott-gall.com/resume" />  
-      <title>Resume_ScottGall</title>
+      <title>resume</title>
   </head>
   <body style="height: 100%; width: 100%; overflow: hidden; margin: 0px; background-color: rgb(82, 86, 89);">
 
