added emoji to tab

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
   <meta property="og:description" content="Portfolio"/>
   <meta property="og:url" content="https://scott-gall.com/" />  
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Scott Gall</title>
+  <title>SG</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+  <link rel="icon" data-emoji="👨‍💻" type="image/png">
 </head>
 <body>
   <div class='container'>
@@ -149,5 +150,24 @@
     </div>
 
   </div>  
+  <script>
+    const favicon = document.querySelector("link[rel=icon]");
+  
+    if (favicon) {
+      const emoji = favicon.getAttribute("data-emoji");
+  
+      if (emoji) {
+        const canvas = document.createElement("canvas");
+        canvas.height = 64;
+        canvas.width = 64;
+  
+        const ctx = canvas.getContext("2d");
+        ctx.font = "64px serif";
+        ctx.fillText(emoji, 0, 64);
+  
+        favicon.href = canvas.toDataURL();
+      }
+    }
+  </script>
 </body>
 </html>
