--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>SG</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-  <link rel="icon" data-emoji="👨‍💻" type="image/png">
+  <!-- <link rel="icon" data-emoji="👨‍💻" type="image/png"> -->
 </head>
 <body>
   <div class='container'>
