changed name of thumbnail

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta property="og:title" content="Portfolio" />
-  <meta property="og:image" content="assets/images/website.png"/>
+  <meta property="og:image" content="assets/images/snapshot.png"/>
   <meta property="og:description" content="Portfolio"/>
   <meta property="og:url" content="https://scott-gall.com/" />  
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
