--- a/resume.html
+++ b/resume.html
@@ -5,7 +5,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge" />
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <meta property="og:title" content="Resume" />
-      <meta property="og:image" content="assets/images/resume.png"/>
+      <meta property="og:image" content="assets/images/resume-pic.png"/>
       <meta property="og:description" content="Resume"/>
       <meta property="og:url" content="https://scott-gall.com/resume" />  
       <title>resume</title>
