--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
 
           <div class='project-container'>
             <p class='project-title'>GUESS THE TRICK</p>
-            <a href="https://scottgall.github.io/Guess-The-Trick/" target="_blank"><img class='thumbnail rounded l-right s-left xs-right' src='assets/images/guessthetrick.jpg'/></a>
-            <p class='description l-text-right s-text-left xs-text-right'>JavaScript hangman game</p>
-            <div class='project-links l-text-right s-text-left xs-text-right'>
+            <a href="https://scottgall.github.io/Guess-The-Trick/" target="_blank"><img class='thumbnail rounded l-right s-left xs-left' src='assets/images/guessthetrick.jpg'/></a>
+            <p class='description l-text-right s-text-left xs-text-left'>JavaScript hangman game</p>
+            <div class='project-links l-text-right s-text-left xs-text-left'>
               <a href="https://scottgall.github.io/Guess-The-Trick/" target="_blank"><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon"></a>
               <a href="https://github.com/scottgall/Guess-The-Trick/" target="_blank"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
             </div>
