added star wars project

--- a/index.html
+++ b/index.html
@@ -136,6 +136,18 @@
           </div>
 
           <div class='project-container'>
+            <p class='project-title'>STAR WARS RPG</p>
+            <a href="https://scottgall.github.io/Star-Wars-RPG/" target="_blank"><img class='thumbnail rounded l-right s-left xs-left' src='assets/images/starwars.jpg'/></a>
+            <p class='description l-text-right s-text-left xs-text-left'>Single-player JavaScript RPG</p>
+            <div class='project-links l-text-right s-text-left xs-text-left'>
+              <a href="https://scottgall.github.io/Star-Wars-RPG/" target="_blank"><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon" /></a>
+              <a href="https://github.com/scottgall/Star-Wars-RPG" target="_blank"><img class="icon" src="assets/images/github.svg" alt="Linkedin icon" ></a>
+            </div>
+            <!-- <a href="https://scottgall.github.io/Star-Wars-RPG/">Link</a>
+            <a href="https://github.com/scottgall/Star-Wars-RPG">GitHub</a> -->
+          </div>
+
+          <div class='project-container'>
             <p class='project-title'>GUESS THE TRICK</p>
             <a href="https://scottgall.github.io/Guess-The-Trick/" target="_blank"><img class='thumbnail rounded l-right s-left xs-left' src='assets/images/guessthetrick.jpg'/></a>
             <p class='description l-text-right s-text-left xs-text-left'>JavaScript hangman game</p>
