removed web dev

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <span class="char7 name">A</span>
             <span class="char8 name">L</span>
             <span class="char9 name">L</span>
-            <span class="char10 title">W</span>
+            <!-- <span class="char10 title">W</span>
             <span class="char11 title">E</span>
             <span class="char12 title">B</span>
             <span class="char13 title">D</span>
@@ -36,7 +36,7 @@
             <span class="char18 title">O</span>
             <span class="char19 title">P</span>
             <span class="char20 title">E</span>
-            <span class="char21 title">R</span>
+            <span class="char21 title">R</span> -->
             <img class='headshot rounded' src='https://res.cloudinary.com/dmkdfvoqb/image/upload/q_auto/v1548286375/scott-square-2.jpg'/>
         </div>
         <div class='icons'>
@@ -126,7 +126,7 @@
           </div>
 
           <div class='project-container'>
-            <p class='project-title'>SKATEBOARD TRIVIA</p>
+            <p class='project-title'>SKATE TRIVIA</p>
             <a href="https://scottgall.github.io/Skateboard-Trivia-Quiz/" target="_blank"><img class='thumbnail rounded l-right s-right' src='assets/images/skateboardtrivia.jpg'/></a>
             <p class='description s-text-eifhr l-text-right'>Timed multiple-choice trivia game</p>
             <div class='project-links l-text-right s-text-right'>
