--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta property="og:title" content="Portfolio" />
   <meta property="og:image" content="assets/images/pic.png"/>
-  <meta property="og:description" content="Portfolio"/>
+  <meta property="og:description" content="Scott Gall's web developer portfoloio site"/>
   <meta property="og:url" content="https://scott-gall.com/" />  
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>SG</title>
