--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class='container'>
     <div class='about-container'>
     <div class='about'>
-      <div class='hi'>Hi I'm Scott</div>
+      <div class='hi'><span class='hi-orange'>Hi I'm</span><span class='name'>Scott<span></span></div>
       <img class='headshot rounded' src='https://res.cloudinary.com/dmkdfvoqb/image/upload/q_auto/v1548286375/scott-square-2.jpg'/>
         <a class='clickable github' href="https://github.com/scottgall">
           <svg
@@ -128,9 +128,9 @@
 
           <div class='project-container'>
             <p class='project-title'>GUESS THE TRICK</p>
-            <a href="https://scottgall.github.io/Guess-The-Trick/" ><img class='thumbnail rounded l-right s-left xs-left' src='assets/images/guessthetrick.jpg'/></a>
-            <p class='description l-text-right s-text-left xs-text-left'>JavaScript hangman game</p>
-            <div class='project-links l-text-right s-text-left xs-text-left'>
+            <a href="https://scottgall.github.io/Guess-The-Trick/" ><img class='thumbnail rounded l-right s-left xs-right' src='assets/images/guessthetrick.jpg'/></a>
+            <p class='description l-text-right s-text-left xs-text-right'>JavaScript hangman game</p>
+            <div class='project-links l-text-right s-text-left xs-text-right'>
               <a href="https://scottgall.github.io/Guess-The-Trick/" ><img class="icon link-icon" src="assets/images/link2.svg" alt="Linkedin icon"></a>
               <a href="https://github.com/scottgall/Guess-The-Trick/" ><img class="icon" src="assets/images/github.svg" alt="Linkedin icon"></a>
             </div>
